--- a/scss/price.scss
+++ b/scss/price.scss
@@ -191,21 +191,31 @@ li:first-child {
 	color: #323643;
 }
 
-// Section ba-advantages Без адаптивности
-.ba-advantages {
-	padding-top:45px;
-	&__title {
-		font: 400 18px/1 "Alegreya Sans SC", sans-serif;
-		color: #323643;
-		text-align: center;
-	}
-	&__list {
+//price
+.ba-price__title {
+	font: 400 18px/1 "Alegreya Sans SC", sans-serif;
+	color: #323643;
+	text-align: center;
+	margin-top: 40px;
+
+
+}
+.ba-price__box--mod {
+	margin-top: 0;
+	margin-top: 70px;
+}
+.ba-price__box {
+	display: flex;
+	margin-top: 55px;
+}
+
+.ba-advantages__list {
 		list-style: none;
 		margin: 0;
 		padding: 0;
 		li {
-			margin-top: 12px;
-			font: 300 16px/1 "Alegreya Sans SC", sans-serif;
+			margin-top: 30px;
+			font: 300 16px/1 "Open Sans Condensed", sans-serif;
 			color: #323643;
 			display: flex;
 			align-items: center;
@@ -213,102 +223,67 @@ li:first-child {
 				margin: 0;
 			}
 		}
-	}
-	&__img {
-		background: url(../img/1276844-48.png) 50% no-repeat;
+
+}
+.ba-price__img {
+	width: 75px;
+	height: 75px;
+	margin-left: 25px;
+	margin-right: 40px;
+	margin-top: 7px;
+}
+.ba-advantages__img {
+			background: url(../img/1276844-48.png) 50% no-repeat;
 		width: 35px;
 		height: 33px;
 		margin-right: 9px;
-	}
-
-}
-// section ba-translate
-.ba-row--mod {
-	display:flex;
-	margin-right: 80px;
-}
-.ba-translate {
-	&__box {
-		width: 20%;
-		img {
-			margin-bottom: 32px;
-			display:block;
-			margin: auto;
-		}
-		p {
-			font: 300 16px/1 "Alegreya Sans SC", sans-serif;
-			color: #323643;
-			text-align: center;
-		}
-	}
-	&__title {
-		font: 400 18px/1 "Alegreya Sans SC", sans-serif;
-		color: #323643;
-		text-align: center;
-		margin-bottom: 72px;
-	}
 }
 
 
-//section ba-team
-.ba-col-4--mod {
-	float:right;
-	margin-right: 150px;
-	margin-bottom: 30px;
+.ba-price__subtitle {
+	font: 400 16px/1 "Alegreya Sans SC", sans-serif;
+	color: #323643;
+	padding-left: 45px;
 }
-.ba-row--mod2 {
-	display:flex;
+.ba-price__options {
+	margin: 0;
+	margin-top: 42px;
+	font: 400 18px/1 "Alegreya Sans SC", sans-serif;
+	color: #323643;
+	margin-left: 45px;
 }
-.ba-team {
+.ba-price__options2 {
+	margin: 0;
+	margin-top: 20px;
+	margin-left: 45px;
+	font: 400 18px/1 "Alegreya Sans SC", sans-serif;
+	color: #323643;
+}
+
+.ba-main {
 	margin-top: 58px;
-	background: url(../img/womancut.jpg) 50% no-repeat;
-	background-position: left bottom;
+	background: url(../img/price-woman.jpg) 50% no-repeat;
+	background-position: right bottom;
 	right: 50%;
-	&__box {
-		display: flex;
-		margin-bottom: 45px;
-		margin-left: 75px;
-	}
-	&__title {
-		font: 400 18px/1 "Alegreya Sans SC", sans-serif;
-		color: #323643;
-		text-align: center;
-		margin-bottom: 80px;
-	}
+	padding-bottom: 110px;
 }
 .ba-woman {
-		margin-top: 50px;
-
-	img {
-
-
+	text-align: left;
+	padding-top: 140px;
+	a{
+		color: #323643;
+		padding-left: 20px;
+		font: 400 36px/1 "Alegreya Sans SC", sans-serif;
 	}
 }
-
-.ba-subtitle__info {
-	font: 300 16px/1.1 "Open Sans Condensed", sans-serif;
+.ba-woman__title {
+	font: 400 36px/1 "Alegreya Sans SC", sans-serif;
 	color: #323643;
-	margin: 0;
-	padding-top: 5px;
+}
 
-}
-.ba-team__boxsmall {
-		display: flex;
-		margin-bottom: 30px;
-		img {
-			display:block;
-			margin:0;
-			width: 30px;
-			height: 30px;
-		}
-		p{
-			font: 400 18px/1 "Alegreya Sans SC", sans-serif;
-			color: #323643;
-			text-align: center;
-			margin: auto;
-			margin-left: 8px;
-		}
-}
+
+
+
 
 
 //footer
